Updated Documentation and development info

--- a/TimberLogHelp/12_UsingLogbookAutomationFeatures.htm
+++ b/TimberLogHelp/12_UsingLogbookAutomationFeatures.htm
@@ -28,24 +28,50 @@ your Logbook.</span></p>
 'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Calibri Light","sans-serif"'>Default Text
-–</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Calibri Light","sans-serif"'>Logbook
-Entry Categories –</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Calibri Light","sans-serif"'>One-Line
-Templates –</span></p>
-<p class="MsoNormal" style=
-'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Calibri Light","sans-serif"'>Multi-Line
-Templates –</span></p>
+<b><span style='font-family:"Calibri Light","sans-serif"'>Default
+Text</span></b> <span style=
+'font-family:"Calibri Light","sans-serif"'>– If enabled, default
+text will automatically be shown every time a new entry is
+started</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
 'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<b><span style='font-family:"Calibri Light","sans-serif"'>Logbook
+Entry Categories</span></b> <span style=
+'font-family:"Calibri Light","sans-serif"'>– If enabled, users can
+select a category for their logbook entries which can be used for
+searching</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style=
+'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<b><span style='font-family:"Calibri Light","sans-serif"'>One-Line
+Templates</span></b> <span style=
+'font-family:"Calibri Light","sans-serif"'>– To insert one-line
+templates, right-click within the entry textbox or type CTRL+SPACE
+while the cursor is in the textbox. A menu will pop up with the
+available one-line template options. Selecting one of these and
+pressing enter, or double-clicking on it, will insert the line of
+text into the Logbook.</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<b><span style=
+'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></b></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<b><span style=
+'font-family:"Calibri Light","sans-serif"'>Multi-Line
+Templates</span></b> <span style=
+'font-family:"Calibri Light","sans-serif"'>– These templates are
+listed by their title in a listbox to the left of the entry
+textbox. Select the appropriate title, press the ‘Insert’ button
+below the multi-line templates listbox, and the associated text
+will be inserted into the Logbook entry.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
