--- a/TimberLogHelp/22_SettingsBlock.htm
+++ b/TimberLogHelp/22_SettingsBlock.htm
@@ -13,7 +13,7 @@
 </head>
 <body lang="EN-US" link="blue" vlink="purple">
 <div class="WordSection1">
-<h2><a name="node20" id="node20"></a><span style=
+<h2><a name="node21" id="node21"></a><span style=
 'font-family:"Calibri Light","sans-serif"'>Settings
 Block</span></h2>
 <p class="MsoNormal" style=
@@ -85,12 +85,13 @@ order, set this to false.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Calibri Light","sans-serif"'><br>
-<b>Embed_TypeFile</b> [default=True]<br>
-- Embeds the type file into the Logbook. The benefit of this is
+<b>Allow_TypeFile_Export</b> [default=True]<br>
+- Type files are embedded into the Logbook. The benefit of this is
 that if the logbook is used on a different computer, a copy of the
 Type File can be exported to the local computer at any time,
 allowing creation of additional logbooks based upon the same
-Logbook Type.</span></p>
+Logbook Type. Setting this option to true allows end-users to
+export the Logbook Type File.</span></p>
 <p class="MsoNormal"><span style=
 'font-family:"Courier New"'>&nbsp;</span></p>
 <p class="MsoNormal" style=
