--- a/TimberLogHelp/27_CommentswithinTypeTemplates.htm
+++ b/TimberLogHelp/27_CommentswithinTypeTemplates.htm
@@ -13,7 +13,7 @@
 </head>
 <body lang="EN-US" link="blue" vlink="purple">
 <div class="WordSection1">
-<h2><a name="node25" id="node25"></a><span style=
+<h2><a name="node26" id="node26"></a><span style=
 'font-family:"Calibri Light","sans-serif"'>Comments within Type
 Templates</span></h2>
 <p class="MsoNormal" style=
@@ -54,11 +54,11 @@ never saved into the logbook.</span></p>
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Calibri Light","sans-serif"'>The Comments
 Block provides users with a less transient method of adding
-comments to a Type File. If the Embed_TypeFile setting is set to
-True, these comments will be embedded into the Logbook, and can be
-exported by users along with the rest of the Logbook Type File at
-any time. This block allows multiple lines of text, enclosed in the
-Comments Block elements.</span></p>
+comments to a Type File. If the Allow_TypeFile_Export setting is
+set to True, these comments can be exported by users along with the
+rest of the Logbook Type File at any time. This block allows
+multiple lines of text, enclosed in the Comments Block
+elements.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
@@ -98,8 +98,9 @@ comment.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style='font-family:"Courier New"'>Because it is placed within
-the Comments Block, it will be embedded into the Logbook if the
-Embed_TypeFile setting is set to True.</span></p>
+the Comments Block, it will be embedded into the Logbook and can be
+exported if the Allow_TypeFile_Export setting is set to
+True.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
