--- a/TimberLogHelp/28_ExampleTypeTemplates.htm
+++ b/TimberLogHelp/28_ExampleTypeTemplates.htm
@@ -13,7 +13,7 @@
 </head>
 <body lang="EN-US" link="blue" vlink="purple">
 <div class="WordSection1">
-<h2><a name="node26" id="node26"></a><span style=
+<h2><a name="node27" id="node27"></a><span style=
 'font-family:"Calibri Light","sans-serif"'>Example Type
 Templates</span></h2>
 <p class="MsoNormal" style=
@@ -205,7 +205,7 @@ couple of settings:</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
-'font-family:"Courier New"'>Embed_TypeFile=True</span></p>
+'font-family:"Courier New"'>Allow_TypeFile_Export=True</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
