--- a/TimberLogHelp/6_Templating.htm
+++ b/TimberLogHelp/6_Templating.htm
@@ -20,7 +20,35 @@
 <span style='font-family:"Calibri Light","sans-serif"'>TimberLog
 uses templates, called Logbook Types, as the foundation for all new
 logbooks. Logbook Types can be very basic, or can include a good
-deal of functionality.</span></p>
+deal of functionality. Some of the templating capabilities
+include:</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style=
+'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<b><span style='font-family:"Calibri Light","sans-serif"'>Default
+Text</span></b> <span style=
+'font-family:"Calibri Light","sans-serif"'>– If enabled, whenever a
+user begins a new Logbook entry, the default text will be inserted
+into the entry. This can help to standardize Logbook entry
+formatting and input</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<b><span style='font-family:"Calibri Light","sans-serif"'>Logbook
+Entry Categories</span></b> <span style=
+'font-family:"Calibri Light","sans-serif"'>– If enabled, users can
+select a category for their logbook entries which can be used for
+searching</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<b><span style=
+'font-family:"Calibri Light","sans-serif"'>One-Line</span></b>
+<span style='font-family:"Calibri Light","sans-serif"'>&amp;
+<b>Multi-Line Templates</b> – These templates allow users to insert
+common lines or chunks of text into their Logbook
+entries</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
