--- a/TimberLogHelp/index.html
+++ b/TimberLogHelp/index.html
@@ -99,7 +99,7 @@ Security, and Data Integrity</a></li>
 <li><a href="9_Quickstart.htm#node8">Quickstart</a></li>
 <li><a href="10_CreatingaNewLogbook.htm#node9">Creating a New
 Logbook</a></li>
-<li><a href="11_OpeningandExistingLogbook.htm#node10">Opening and
+<li><a href="11_OpeninganExistingLogbook.htm#node10">Opening an
 Existing Logbook</a></li>
 <li><a href="12_UsingLogbookAutomationFeatures.htm#node11">Using
 Logbook Automation Features</a></li>
@@ -113,37 +113,43 @@ Details</a></li>
 Logbook Integrity Audit</a></li>
 <li><a href="17_ExportingLogbookData.htm#node16">Exporting Logbook
 Data</a></li>
+<li><a href="18_PrintingLogbookData.htm#node17">Printing Logbook
+Data</a></li>
 </ul>
 </li>
-<li><a href="18_LogbookTypeTemplates.htm#node17">Logbook Type
+<li><a href="19_LogbookTypeTemplates.htm#node18">Logbook Type
 Templates</a>
 <ul>
-<li><a href="19_LogbookTypeBlock.htm#node18">Logbook Type
+<li><a href="20_LogbookTypeBlock.htm#node19">Logbook Type
 Block</a></li>
-<li><a href="20_DescriptionBlock.htm#node19">Description
+<li><a href="21_DescriptionBlock.htm#node20">Description
 Block</a></li>
-<li><a href="21_SettingsBlock.htm#node20">Settings Block</a></li>
-<li><a href="22_DefaultCategoriesBlock.htm#node21">Default
+<li><a href="22_SettingsBlock.htm#node21">Settings Block</a></li>
+<li><a href="23_DefaultCategoriesBlock.htm#node22">Default
 Categories Block</a></li>
-<li><a href="23_DefaultTextBlock.htm#node22">Default Text
+<li><a href="24_DefaultTextBlock.htm#node23">Default Text
 Block</a></li>
-<li><a href="24_OneLineBlock.htm#node23">One Line Block</a></li>
-<li><a href="25_MultiLineBock.htm#node24">Multi Line Bock</a></li>
-<li><a href="26_CommentswithinTypeTemplates.htm#node25">Comments
+<li><a href="25_OneLineBlock.htm#node24">One Line Block</a></li>
+<li><a href="26_MultiLineBock.htm#node25">Multi Line Bock</a></li>
+<li><a href="27_CommentswithinTypeTemplates.htm#node26">Comments
 within Type Templates</a></li>
-<li><a href="27_ExampleTypeTemplates.htm#node26">Example Type
+<li><a href="28_ExampleTypeTemplates.htm#node27">Example Type
 Templates</a></li>
 </ul>
 </li>
-<li><a href="28_TimberLogDevelopment.htm#node27">TimberLog
+<li><a href="29_TimberLogDevelopment.htm#node28">TimberLog
 Development</a>
 <ul>
-<li><a href="28_TimberLogDevelopment.htm#node28">Development
+<li><a href="30_DevelopmentEnvironment.htm#node29">Development
 Environment</a></li>
-<li><a href="30_SourceCodeandBinaries.htm#node29">Source Code and
+<li><a href="31_SourceCodeandBinaries.htm#node30">Source Code and
 Binaries</a></li>
-<li><a href="31_BasicLogbookFileFormatandConcept.htm#node30">Basic
+<li><a href="32_TimberLogFileTypes.htm#node31">TimberLog File
+Types</a></li>
+<li><a href="33_BasicLogbookFileFormatandConcept.htm#node32">Basic
 Logbook File Format and Concept</a></li>
+<li><a href="34_DonatingtoTimberLog.htm#node33">Donating to
+TimberLog</a></li>
 </ul>
 </li>
 </ul>
@@ -154,39 +160,43 @@ Logbook File Format and Concept</a></li>
 <div><input type="text" id="searchTopic" name=
 "searchTopic" /></div>
 <select id="topicsList" size="30">
-<option value="31_BasicLogbookFileFormatandConcept.htm#node30">
+<option value="33_BasicLogbookFileFormatandConcept.htm#node32">
 Basic Logbook File Format and Concept</option>
-<option value="26_CommentswithinTypeTemplates.htm#node25">Comments
+<option value="27_CommentswithinTypeTemplates.htm#node26">Comments
 within Type Templates</option>
 <option value="10_CreatingaNewLogbook.htm#node9">Creating a New
 Logbook</option>
-<option value="22_DefaultCategoriesBlock.htm#node21">Default
+<option value="23_DefaultCategoriesBlock.htm#node22">Default
 Categories Block</option>
-<option value="23_DefaultTextBlock.htm#node22">Default Text
+<option value="24_DefaultTextBlock.htm#node23">Default Text
 Block</option>
-<option value="20_DescriptionBlock.htm#node19">Description
+<option value="21_DescriptionBlock.htm#node20">Description
 Block</option>
-<option value="28_TimberLogDevelopment.htm#node28">Development
+<option value="30_DevelopmentEnvironment.htm#node29">Development
 Environment</option>
+<option value="34_DonatingtoTimberLog.htm#node33">Donating to
+TimberLog</option>
 <option value="5_EncryptionSecurityandDataIntegrity.htm#node4">
 Encryption, Security, and Data Integrity</option>
-<option value="27_ExampleTypeTemplates.htm#node26">Example Type
+<option value="28_ExampleTypeTemplates.htm#node27">Example Type
 Templates</option>
 <option value="17_ExportingLogbookData.htm#node16">Exporting
 Logbook Data</option>
 <option value="3_Features.htm#node2">Features</option>
 <option value="3_Features.htm#node3">Free and Opensource</option>
-<option value="19_LogbookTypeBlock.htm#node18">Logbook Type
+<option value="20_LogbookTypeBlock.htm#node19">Logbook Type
 Block</option>
-<option value="18_LogbookTypeTemplates.htm#node17">Logbook Type
+<option value="19_LogbookTypeTemplates.htm#node18">Logbook Type
 Templates</option>
-<option value="25_MultiLineBock.htm#node24">Multi Line
+<option value="26_MultiLineBock.htm#node25">Multi Line
 Bock</option>
-<option value="24_OneLineBlock.htm#node23">One Line Block</option>
-<option value="11_OpeningandExistingLogbook.htm#node10">Opening and
+<option value="25_OneLineBlock.htm#node24">One Line Block</option>
+<option value="11_OpeninganExistingLogbook.htm#node10">Opening an
 Existing Logbook</option>
 <option value="16_PerformLogbookIntegrityAudit.htm#node15">Perform
 Logbook Integrity Audit</option>
+<option value="18_PrintingLogbookData.htm#node17">Printing Logbook
+Data</option>
 <option value="2_ProjectPrinciples.htm#node1">Project
 Principles</option>
 <option value="1_PurposeofTimberLog.htm#node0">Purpose of
@@ -194,14 +204,16 @@ TimberLog</option>
 <option value="9_Quickstart.htm#node8">Quickstart</option>
 <option value="14_SearchingtheLogbook.htm#node13">Searching the
 Logbook</option>
-<option value="21_SettingsBlock.htm#node20">Settings Block</option>
-<option value="30_SourceCodeandBinaries.htm#node29">Source Code and
+<option value="22_SettingsBlock.htm#node21">Settings Block</option>
+<option value="31_SourceCodeandBinaries.htm#node30">Source Code and
 Binaries</option>
 <option value="6_Templating.htm#node5">Templating</option>
 <option value="8_TheStartScreen.htm#node7">The Start
 Screen</option>
-<option value="28_TimberLogDevelopment.htm#node27">TimberLog
+<option value="29_TimberLogDevelopment.htm#node28">TimberLog
 Development</option>
+<option value="32_TimberLogFileTypes.htm#node31">TimberLog File
+Types</option>
 <option value="start.htm">TimberLog Manual</option>
 <option value="12_UsingLogbookAutomationFeatures.htm#node11">Using
 Logbook Automation Features</option>
