Added information about Exporting and Printing

--- a/TimberLogHelp/14_SearchingtheLogbook.htm
+++ b/TimberLogHelp/14_SearchingtheLogbook.htm
@@ -18,8 +18,11 @@
 Logbook</span></h2>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style='font-family:"Calibri Light","sans-serif"'>Search text,
-username, date</span></p>
+<span style='font-family:"Calibri Light","sans-serif"'>TimberLog
+allows a number of options for searching Logbook Entries including
+text search (which searches throughout the text of Logbook
+Entries), Username, Date range, and Entry Category. Any combination
+of these options can be used.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
