--- a/TimberLogHelp/18_PrintingLogbookData.htm
+++ b/TimberLogHelp/18_PrintingLogbookData.htm
@@ -18,12 +18,18 @@
 Data</span></h2>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
-<span style=
-'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
+<span style='font-family:"Calibri Light","sans-serif"'>If the
+Logbook settings allow, the entire Logbook or selected Logbook
+Entries can be printed.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
 'font-family:"Calibri Light","sans-serif"'>&nbsp;</span></p>
+<p class="MsoNormal" style=
+'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
+<span style='font-family:"Calibri Light","sans-serif"'>Please keep
+in mind that very large Logbooks may take longer to format and
+print.</span></p>
 <p class="MsoNormal" style=
 'margin-bottom:0in;margin-bottom:.0001pt;line-height: normal'>
 <span style=
